--- a/src/components/component.module.css
+++ b/src/components/component.module.css
@@ -1,9 +1,27 @@
+.h2 {
+    font-family: 'Ubuntu Monospace', monospace;
+}
 .listCardContainer {
     display: flex;
     justify-content: space-between;
     border-radius: 10px;
     box-shadow: 3px 5px 10px;
-    width: 250px;
+    width: 350px;
     margin: 10px;
-    padding: 2px 5px;
+    padding: 10px 5px;
+}
+
+.listCardImage {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.listCardDetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px;
+    width: 250px;
 }
